fix : content in card 1

--- a/index.html
+++ b/index.html
@@ -182,10 +182,9 @@
             <div class="card-body">
               <h5 class="card-title">Football Mobile Game</h5>
               <p class="card-text">
-                Football Mobile Game Bear claw sesame snaps bonbon cookie.
-                Fruitcake brownie lemon drops donut gummi bears jelly beans
-                sesame snaps. Candy canes powder danish sweet croissant brownie
-                macaroon. View Project
+                Bear claw sesame snaps bonbon cookie. Fruitcake brownie lemon
+                drops donut gummi bears jelly beans sesame snaps. Candy canes
+                powder danish sweet croissant brownie macaroon.
               </p>
               <a href="#" class="btn btn-primary">View Project</a>
             </div>
